Correct cut off arrows on mobile menu

--- a/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
+++ b/wp/wp-content/themes/phila.gov-theme/css/scss/base/_global-nav.scss
@@ -156,7 +156,7 @@
         }
         a{
           display: block;
-          padding:1rem;
+          padding: 1rem 2rem 1rem 1rem;
           line-height: 1;
 
           &:hover,
@@ -177,6 +177,9 @@
       }
     }
     .is-drilldown-submenu-parent > a {
+      &::after{
+        right: 2rem;
+      }
       &:hover::after,
       &:active::after{
         border-color:transparent transparent transparent white;
